<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#009900"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/firstNameTextView"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/firstNameTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/firstNameTextView"
        android:width="250dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/lastNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/firstNameTextView"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/lastNameTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstNameTextField"
        android:layout_toRightOf="@+id/lastNameTextView"
        android:width="250dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/lastNameTextView"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/emailTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastNameTextField"
        android:layout_toRightOf="@+id/emailTextView"
        android:width="300dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/emailTextView"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/dateTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTextField"
        android:layout_toRightOf="@+id/dateTextView"
        android:width="250dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/dateTextView"
        android:layout_marginTop="30dp"/>
    <RadioGroup
        android:id="@+id/radioGroupId"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="10dp"
    android:layout_below="@+id/dateTextView"
    android:layout_toRightOf="@+id/genderTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/maleId"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/feMaleId"/>
    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_below="@+id/radioGroupId"
        android:layout_alignRight="@+id/lastNameTextView"
        android:layout_alignEnd="@+id/lastNameTextView"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHOW"
        android:id="@+id/showButton"
        android:layout_alignTop="@+id/saveButton"
        android:layout_alignLeft="@+id/dateTextField"
        android:layout_alignStart="@+id/dateTextField" />

</RelativeLayout>
